--- a/config/deeprecon_pyfastl2lir_alpha100_vgg19_allunits.yaml
+++ b/config/deeprecon_pyfastl2lir_alpha100_vgg19_allunits.yaml
@@ -17,15 +17,15 @@ test fmri:
     - ./data/fmri/sub-03_ImageNetTest_fmriprep_volume_native.h5
 
 rois:
-  V1:  ROI_V1 = 1
-  V2:  ROI_V2 = 1
-  V3:  ROI_V3 = 1
-  V4:  ROI_hV4 = 1
-  LOC: ROI_LOC = 1
-  FFA: ROI_FFA = 1
-  PPA: ROI_PPA = 1
-  LVC: ROI_LVC = 1
-  HVC: ROI_HVC = 1
+  #V1:  ROI_V1 = 1
+  #V2:  ROI_V2 = 1
+  #V3:  ROI_V3 = 1
+  #V4:  ROI_hV4 = 1
+  #LOC: ROI_LOC = 1
+  #FFA: ROI_FFA = 1
+  #PPA: ROI_PPA = 1
+  #LVC: ROI_LVC = 1
+  #HVC: ROI_HVC = 1
   VC:  ROI_VC = 1
 
 # The number of voxels used in feature decoding
@@ -56,21 +56,21 @@ network:
   caffe/VGG19
 
 layers:
-  - conv1_1
-  - conv1_2
-  - conv2_1
-  - conv2_2
-  - conv3_1
-  - conv3_2
-  - conv3_3
-  - conv3_4
-  - conv4_1
-  - conv4_2
-  - conv4_3
-  - conv4_4
-  - conv5_1
-  - conv5_2
-  - conv5_3
+  #- conv1_1
+  #- conv1_2
+  #- conv2_1
+  #- conv2_2
+  #- conv3_1
+  #- conv3_2
+  #- conv3_3
+  #- conv3_4
+  #- conv4_1
+  #- conv4_2
+  #- conv4_3
+  #- conv4_4
+  #- conv5_1
+  #- conv5_2
+  #- conv5_3
   - conv5_4
   - fc6
   - fc7
@@ -83,12 +83,8 @@ feature decoder dir:
 
 # Decoded features
 decoded feature dir:
-  ./data/decoded_features/ImageNetTest/deeprecon_fmriprep_pyfastl2lir_alpha100_allunits
+  ./data/decoded_features/ImageNetTest/train_deeprecon_rep5_test_ImageNetTest_fmriprep_pyfastl2lir_alpha100_allunits
 
 # Learning parameters
 alpha: 100
 chunk axis: 1
-
-# Figure output
-decoding figure dir:
-  ./data/figures/feature_decoding/ImageNetTest/deeprecon_fmriprep_pyfastl2lir_alpha100_allunits
