--- a/config/deeprecon_pyfastl2lir_alpha100_vgg19_allunits.yaml
+++ b/config/deeprecon_pyfastl2lir_alpha100_vgg19_allunits.yaml
@@ -2,118 +2,118 @@
 
 decoder:
   name: deeprecon_fmriprep_pyfastl2lir_alpha100_allunits
-  path: ./data/feature_decoders/ImageNetTraining/${decoder.name}/${decoder.target.name}
+  path: ./data/feature_decoders/ImageNetTraining/${decoder.name}/${decoder.features.name}
   parameters:
     alpha: 100
     chunk_axis: 1
 
-  training_fmri:
+  fmri:
     name: ImageNetTraining_fmriprep_volume_native
     subjects:
-      - name: sub-01
-        paths:
-          - ./data/fmri/Deeprecon/sub-01_${decoder.training_fmri.name}.h5
-      - name: sub-02
-        paths:
-          - ./data/fmri/Deeprecon/sub-02_${decoder.training_fmri.name}.h5
+      #- name: sub-01
+      #  paths:
+      #    - ./data/fmri/Deeprecon/sub-01_${decoder.fmri.name}.h5
+      #- name: sub-02
+      #  paths:
+      #    - ./data/fmri/Deeprecon/sub-02_${decoder.fmri.name}.h5
       - name: sub-03
         paths:
-          - ./data/fmri/Deeprecon/sub-03_${decoder.training_fmri.name}.h5
+          - ./data/fmri/Deeprecon/sub-03_${decoder.fmri.name}.h5
     rois:
-      - {name: V1,  select: ROI_V1 = 1,  num: 500}
-      - {name: V2,  select: ROI_V2 = 1,  num: 500}
-      - {name: V3,  select: ROI_V3 = 1,  num: 500}
-      - {name: hV4, select: ROI_hV4 = 1, num: 500}
-      - {name: LOC, select: ROI_LOC = 1, num: 500}
-      - {name: FFA, select: ROI_FFA = 1, num: 500}
-      - {name: PPA, select: ROI_PPA = 1, num: 500}
-      - {name: LVC, select: ROI_LVC = 1, num: 500}
-      - {name: HVC, select: ROI_HVC = 1, num: 500}
+      #- {name: V1,  select: ROI_V1 = 1,  num: 500}
+      #- {name: V2,  select: ROI_V2 = 1,  num: 500}
+      #- {name: V3,  select: ROI_V3 = 1,  num: 500}
+      #- {name: hV4, select: ROI_hV4 = 1, num: 500}
+      #- {name: LOC, select: ROI_LOC = 1, num: 500}
+      #- {name: FFA, select: ROI_FFA = 1, num: 500}
+      #- {name: PPA, select: ROI_PPA = 1, num: 500}
+      #- {name: LVC, select: ROI_LVC = 1, num: 500}
+      #- {name: HVC, select: ROI_HVC = 1, num: 500}
       - {name: VC,  select: ROI_VC = 1,  num: 500}
     label_key: stimulus_name
 
-  target:
+  features:
     name: caffe/VGG19
     paths:
-      - ./data/features/ImageNetTraining/${decoder.target.name}
+      - ./data/features/ImageNetTraining/${decoder.features.name}
     layers:
-      - conv1_1
-      - conv1_2
-      - conv2_1
-      - conv2_2
-      - conv3_1
-      - conv3_2
-      - conv3_3
-      - conv3_4
-      - conv4_1
-      - conv4_2
-      - conv4_3
-      - conv4_4
-      - conv5_1
-      - conv5_2
-      - conv5_3
-      - conv5_4
+      #- conv1_1
+      #- conv1_2
+      #- conv2_1
+      #- conv2_2
+      #- conv3_1
+      #- conv3_2
+      #- conv3_3
+      #- conv3_4
+      #- conv4_1
+      #- conv4_2
+      #- conv4_3
+      #- conv4_4
+      #- conv5_1
+      #- conv5_2
+      #- conv5_3
+      #- conv5_4
       - fc6
       - fc7
       - fc8
 
 decoded_feature:
   name: train_deeprecon_rep5_test_ImageNetTest_fmriprep_pyfastl2lir_alpha100_allunits
-  path: ./data/decoded_features/ImageNetTest/${decoded_feature.name}/${decoded_feature.target.name}
+  path: ./data/decoded_features/ImageNetTest/${decoded_feature.name}/${decoded_feature.features.name}
   parameters:
     average_sample: true
 
   decoder:
     name: deeprecon_fmriprep_pyfastl2lir_alpha100_allunits
-    path: ./data/feature_decoders/ImageNetTraining/${decoder.name}/${decoder.target.name}
+    path: ./data/feature_decoders/ImageNetTraining/${decoder.name}/${decoder.features.name}
 
-  test_fmri:
+  fmri:
     name: ImageNetTest_fmriprep_volume_native
     subjects:
-      - name: sub-01
-        paths:
-          - ./data/fmri/Deeprecon/sub-01_${decoded_feature.test_fmri.name}.h5
-      - name: sub-02
-        paths:
-          - ./data/fmri/Deeprecon/sub-02_${decoded_feature.test_fmri.name}.h5
+      #- name: sub-01
+      #  paths:
+      #    - ./data/fmri/Deeprecon/sub-01_${decoded_feature.fmri.name}.h5
+      #- name: sub-02
+      #  paths:
+      #    - ./data/fmri/Deeprecon/sub-02_${decoded_feature.fmri.name}.h5
       - name: sub-03
         paths:
-          - ./data/fmri/Deeprecon/sub-03_${decoded_feature.test_fmri.name}.h5
+          - ./data/fmri/Deeprecon/sub-03_${decoded_feature.fmri.name}.h5
     rois:
-      - {name: V1,  select: ROI_V1 = 1}
-      - {name: V2,  select: ROI_V2 = 1}
-      - {name: V3,  select: ROI_V3 = 1}
-      - {name: hV4, select: ROI_hV4 = 1}
-      - {name: LOC, select: ROI_LOC = 1}
-      - {name: FFA, select: ROI_FFA = 1}
-      - {name: PPA, select: ROI_PPA = 1}
-      - {name: LVC, select: ROI_LVC = 1}
-      - {name: HVC, select: ROI_HVC = 1}
+      #- {name: V1,  select: ROI_V1 = 1}
+      #- {name: V2,  select: ROI_V2 = 1}
+      #- {name: V3,  select: ROI_V3 = 1}
+      #- {name: hV4, select: ROI_hV4 = 1}
+      #- {name: LOC, select: ROI_LOC = 1}
+      #- {name: FFA, select: ROI_FFA = 1}
+      #- {name: PPA, select: ROI_PPA = 1}
+      #- {name: LVC, select: ROI_LVC = 1}
+      #- {name: HVC, select: ROI_HVC = 1}
       - {name: VC,  select: ROI_VC = 1}
     label_key: stimulus_name
     exclude_labels:
 
-  target:
+  features:
     name: caffe/VGG19
     paths:
-      - ./data/features/ImageNetTest/${decoded_feature.target.name}
+      - ./data/features/ImageNetTest/${decoded_feature.features.name}
     layers:
-      - conv1_1
-      - conv1_2
-      - conv2_1
-      - conv2_2
-      - conv3_1
-      - conv3_2
-      - conv3_3
-      - conv3_4
-      - conv4_1
-      - conv4_2
-      - conv4_3
-      - conv4_4
-      - conv5_1
-      - conv5_2
-      - conv5_3
-      - conv5_4
+      #- conv1_1
+      #- conv1_2
+      #- conv2_1
+      #- conv2_2
+      #- conv3_1
+      #- conv3_2
+      #- conv3_3
+      #- conv3_4
+      #- conv4_1
+      #- conv4_2
+      #- conv4_3
+      #- conv4_4
+      #- conv5_1
+      #- conv5_2
+      #- conv5_3
+      #- conv5_4
       - fc6
       - fc7
       - fc8
